# rocket-jump

./: .gitignore  README.md  finalize_fixes.ps1
backend/: .env.example  .gitignore  Dockerfile  README.md  demo-leaderboard.sh  docker-compose.yml  next.config.js  package-lock.json  package.json  test-analytics.sh  test-campaign-chaos.sh  test-campaign-consistency.sh  test-campaign-ingestion.sh  tsconfig.json  vitest.security.config.ts
backend/examples/: webhook-receiver.js
backend/prisma/: schema.prisma  seed.ts
backend/prisma/migrations/: add_buyback_campaigns.prisma
backend/src/: index.ts  middleware.ts
backend/src/app/: layout.tsx
backend/src/auth/: api-key.guard.ts  auth.constants.ts  auth.controller.spec.ts  auth.controller.ts  auth.decorators.ts  auth.dto.ts  auth.module.ts  auth.service.spec.ts  auth.service.ts  cors.config.spec.ts  cors.config.ts  guards.spec.ts  jwt-auth.guard.ts  jwt.strategy.ts  main.ts  nonce.service.spec.ts  nonce.service.ts  rate-limit.middleware.spec.ts  rate-limit.middleware.ts  roles.guard.ts  (+5 more)
contracts/token-factory/: Cargo.toml
contracts/token-factory/src/: lib.rs
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
scripts/: build-contract.sh  ci-check.sh  deploy-testnet.sh  generate-security-report.sh  generate_issues.ps1  migrate-contract-data.sh  replay-test.sh  rollback-upgrade.sh  run-tests.sh  security-audit.sh  setup-soroban.sh  smoke-test.sh  update-frontend-env.sh  upgrade-contract.sh  upload-test-artifacts.sh  verify-deployment.sh  verify-wallet.sh
(+138 files in other folders)
